--- a/Shanty's Bakery/about.html
+++ b/Shanty's Bakery/about.html
@@ -12,7 +12,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="products.html">Products</a>
-            <a href="inquiry.html">Inquiry</a>
+            <a href="Inquiry.html">Inquiry</a>
             <a href="contact.html">Contact</a>
         </nav>
 
@@ -32,6 +32,6 @@
     <p>We see the bakery as the most loved bakery in krugersdorp, known for its quality and warm customer service.</p>
     </section>
     </main>
-    
+  <script src="js/script.js"></script>
 </body>
 </html>
