--- a/Shanty's Bakery/index.html
+++ b/Shanty's Bakery/index.html
@@ -19,12 +19,21 @@
       <a href="products.html">Products</a>
       <a href="inquiry.html">Inquiry</a>
       <a href="contact.html">Contact</a>
+
+
+    <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </nav>
 
+  <script src="js/script.js"></script>
   
 <main>
   <header class="hero"> 
     <h1>Welcome to my business</h1>
+    <h2>Your go-to bakery for freshly baked cakes and pastries. Order online or visit us today!</h2>
    <marquee><h2>Enjoy 50% off this week!</h2></marquee>
     <p>Shanty's bakery offers cakes and pastries daily with affordable prices and an experience that you can not forget.<br> We are very please to share our space with you and we ensure that your needs will be met and allow you to enjoy this experience with us.</p>
 
@@ -36,7 +45,7 @@
   <div class="search">
     <input class="srch" type="search" name="" placeholder="Type to Text">
     <a href="#"> <button class="btn">Search</button></a>
-  </div>
+      </div>
 </main>
 
   
