--- a/Shanty's Bakery/inquiry.html
+++ b/Shanty's Bakery/inquiry.html
@@ -18,27 +18,36 @@
     </nav>
 
   <main>
-    <section class="inquiry">
-    <h1>Send an inquiry</h1>
+    <section class="Inquiry">
+    <h1>Send an Inquiry</h1>
     <p>Please fill in the form below, we would love to hear from you.</p>
 
     <form action="mail to:your-email@example.com" method="post" enctype="text/plain">
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name"><br><br>
+        <input type="text" id="name" name="name" placeholder="Enter your name" required aria-describedby="name-error"  required>
+          <span class="error-message" id="name-error"></span>
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email"><br><br>
+        <input type="email" id="email" name="email" placeholder="you@example.com" required aria-describedby="email-error" required>
+          <span class="error-message" id="email-error"></span>
 
-        <label for="phone">Phone:</label>
-        <input type="tel" id="phone" name="phone"><br><br>
+        <label for="type">Enquiry Type:</label>
+        <select id="type" required>
+          <option value="">--Select--</option>
+          <option value="product">Product Enquiry</option>
+          <option value="volunteer">Volunteer</option>
+          <option value="sponsor">Sponsor</option>
+        </select>
 
-        <label for="message">Message:</label>
-        <textarea id="message" name="messagee"></textarea><br><br>
+        <label for="message"> Additional Details:</label>
+        <textarea id="message" name="message" rows="4" placeholder="Write your message here" required aria-describedby="message-error"></textarea> 
 
-        <input type="submit" value="Submit Inquiry">
+        <button type="submit">Submit Enquiry</button>
     </form>
+    <div id="response"></div>
     </section>
   </main>
   
+  <script src="js/script.js"></script>
     </body>
     </html>
